Fixing spacing

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -38,6 +38,9 @@ body{ padding-top:50px; }
   border-left: 0px;
   font-size:1.35vh;
 }
+#FAQMain{
+    margin-top:5vh;
+}
 .fpLine{
     margin-bottom: 0;
 }
